Migrated tests to JUnit 5 Added Gradle plugin to generate GsonBuildConfig
Signed-off-by: Alessadro Parisi <alessandro.parisi406@gmail.com>