@@ -16,10 +16,6 @@
 
 package com.google.gson.functional;
 
-import java.io.IOException;
-import java.util.Arrays;
-import java.util.List;
-
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.TypeAdapter;
@@ -28,13 +24,19 @@ import com.google.gson.annotations.JsonAdapter;
 import com.google.gson.reflect.TypeToken;
 import com.google.gson.stream.JsonReader;
 import com.google.gson.stream.JsonWriter;
+import org.junit.jupiter.api.Test;
 
-import junit.framework.TestCase;
+import java.io.IOException;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Functional tests for the {@link com.google.gson.annotations.JsonAdapter} annotation on fields.
  */
-public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
+public final class JsonAdapterAnnotationOnFieldsTest {
+
+  @Test
   public void testClassAnnotationAdapterTakesPrecedenceOverDefault() {
     Gson gson = new Gson();
     String json = gson.toJson(new Computer(new User("Inderjeet Singh")));
@@ -43,6 +45,7 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
     assertEquals("UserClassAnnotationAdapter", computer.user.name);
   }
 
+  @Test
   public void testClassAnnotationAdapterFactoryTakesPrecedenceOverDefault() {
     Gson gson = new Gson();
     String json = gson.toJson(new Gizmo(new Part("Part")));
@@ -51,6 +54,7 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
     assertEquals("GizmoPartTypeAdapterFactory", computer.part.name);
   }
 
+  @Test
   public void testRegisteredTypeAdapterTakesPrecedenceOverClassAnnotationAdapter() {
     Gson gson = new GsonBuilder()
         .registerTypeAdapter(User.class, new RegisteredUserAdapter())
@@ -61,13 +65,14 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
     assertEquals("RegisteredUserAdapter", computer.user.name);
   }
 
+  @Test
   public void testFieldAnnotationTakesPrecedenceOverRegisteredTypeAdapter() {
     Gson gson = new GsonBuilder()
       .registerTypeAdapter(Part.class, new TypeAdapter<Part>() {
-        @Override public void write(JsonWriter out, Part part) throws IOException {
+        @Override public void write(JsonWriter out, Part part) {
           throw new AssertionError();
         }
-        @Override public Part read(JsonReader in) throws IOException {
+        @Override public Part read(JsonReader in) {
           throw new AssertionError();
         }
       }).create();
@@ -77,6 +82,7 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
     assertEquals("PartJsonFieldAnnotationAdapter", gadget.part.name);
   }
 
+  @Test
   public void testFieldAnnotationTakesPrecedenceOverClassAnnotation() {
     Gson gson = new Gson();
     String json = gson.toJson(new Computer2(new User("Inderjeet Singh")));
@@ -120,12 +126,15 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
 
   private static class GizmoPartTypeAdapterFactory implements TypeAdapterFactory {
     @Override public <T> TypeAdapter<T> create(Gson gson, final TypeToken<T> type) {
-      return new TypeAdapter<T>() {
-        @Override public void write(JsonWriter out, T value) throws IOException {
+      return new TypeAdapter<>() {
+        @Override
+        public void write(JsonWriter out, T value) throws IOException {
           out.value("GizmoPartTypeAdapterFactory");
         }
+
         @SuppressWarnings("unchecked")
-        @Override public T read(JsonReader in) throws IOException {
+        @Override
+        public T read(JsonReader in) throws IOException {
           in.nextString();
           return (T) new Part("GizmoPartTypeAdapterFactory");
         }
@@ -187,6 +196,7 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
     }
   }
 
+  @Test
   public void testJsonAdapterInvokedOnlyForAnnotatedFields() {
     Gson gson = new Gson();
     String json = "{'part1':'name','part2':{'name':'name2'}}";
@@ -204,6 +214,7 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
     }
   }
 
+  @Test
   public void testJsonAdapterWrappedInNullSafeAsRequested() {
     Gson gson = new Gson();
     String fromJson = "{'part':null}";
@@ -225,6 +236,7 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
   }
 
   /** Regression test contributed through https://github.com/google/gson/issues/831 */
+  @Test
   public void testNonPrimitiveFieldAnnotationTakesPrecedenceOverDefault() {
     Gson gson = new Gson();
     String json = gson.toJson(new GadgetWithOptionalPart(new Part("foo")));
@@ -234,6 +246,7 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
   }
 
   /** Regression test contributed through https://github.com/google/gson/issues/831 */
+  @Test
   public void testPrimitiveFieldAnnotationTakesPrecedenceOverDefault() {
     Gson gson = new Gson();
     String json = gson.toJson(new GadgetWithPrimitivePart(42));
@@ -252,11 +265,14 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
   }
 
   private static final class LongToStringTypeAdapterFactory implements TypeAdapterFactory {
-    static final TypeAdapter<Long> ADAPTER = new TypeAdapter<Long>() {
-      @Override public void write(JsonWriter out, Long value) throws IOException {
+    static final TypeAdapter<Long> ADAPTER = new TypeAdapter<>() {
+      @Override
+      public void write(JsonWriter out, Long value) throws IOException {
         out.value(value.toString());
       }
-      @Override public Long read(JsonReader in) throws IOException {
+
+      @Override
+      public Long read(JsonReader in) throws IOException {
         return in.nextLong();
       }
     };
@@ -273,9 +289,10 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
     }
   }
 
+  @Test
   public void testFieldAnnotationWorksForParameterizedType() {
     Gson gson = new Gson();
-    String json = gson.toJson(new Gizmo2(Arrays.asList(new Part("Part"))));
+    String json = gson.toJson(new Gizmo2(List.of(new Part("Part"))));
     assertEquals("{\"part\":\"GizmoPartTypeAdapterFactory\"}", json);
     Gizmo2 computer = gson.fromJson("{'part':'Part'}", Gizmo2.class);
     assertEquals("GizmoPartTypeAdapterFactory", computer.part.get(0).name);
@@ -291,14 +308,17 @@ public final class JsonAdapterAnnotationOnFieldsTest extends TestCase {
 
   private static class Gizmo2PartTypeAdapterFactory implements TypeAdapterFactory {
     @Override public <T> TypeAdapter<T> create(Gson gson, final TypeToken<T> type) {
-      return new TypeAdapter<T>() {
-        @Override public void write(JsonWriter out, T value) throws IOException {
+      return new TypeAdapter<>() {
+        @Override
+        public void write(JsonWriter out, T value) throws IOException {
           out.value("GizmoPartTypeAdapterFactory");
         }
+
         @SuppressWarnings("unchecked")
-        @Override public T read(JsonReader in) throws IOException {
+        @Override
+        public T read(JsonReader in) throws IOException {
           in.nextString();
-          return (T) Arrays.asList(new Part("GizmoPartTypeAdapterFactory"));
+          return (T) List.of(new Part("GizmoPartTypeAdapterFactory"));
         }
       };
     }
